; ModuleID = '/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_CloseSD.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_CloseSD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.discovery_sys* }
%struct.discovery_sys = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @CloseSD to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CloseSD(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  %4 = alloca %struct.discovery_sys*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = bitcast i32* %5 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %6, %struct.TYPE_2__** %3, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.discovery_sys*, %struct.discovery_sys** %8, align 8
  store %struct.discovery_sys* %9, %struct.discovery_sys** %4, align 8
  %10 = load %struct.discovery_sys*, %struct.discovery_sys** %4, align 8
  %11 = call i32 @CleanCommon(%struct.discovery_sys* %10)
  ret void
}

declare dso_local i32 @CleanCommon(%struct.discovery_sys*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
